@@ -55,6 +55,7 @@ version 10:
 - WebP encoding via libwebp
 - ATRAC3+ decoder
 - framepack filter
+- Mirillis FIC video decoder
 
 
 version 9:
